--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
