--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bootstrap": "^5.1.3",
     "gatsby": "^4.2.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
