--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "gatsby": "^4.2.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1"
   },
